# YOLOv8-onnx-segmentation

./: CMakeLists.txt  README.md  main.cpp
include/: inference.h  inference_onnx.h
src/: inference.cpp  inference_onnx.cpp
